2006-02-18  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Escape ' characters when searching
	
2006-02-16  Brent Smith  <gnome@nextreality.net>

	* src/yelp-html.cpp:
	re-applied DonS' a11y patch, see bug #329407, comment #9

2006-02-16  Brent Smith  <gnome@nextreality.net>

	* src/yelp-main.c: (main):
	set MOZ_DISABLE_PANGO in the environment to fix broken rendering of
	certain characters, fixes #329461

2006-02-16  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Escape characters when searching, fixes #331422

2006-02-15  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-print.c:
	Focus print preview on html widget, fixing funny
	window-not-resizing issues

==================== 2.13.5 ====================

2006-02-12  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.13.5

2006-02-12  Brent Smith  <gnome@nextreality.net>

	* src/yelp-html.cpp:
	Reverting DonS' a11y patch as it causes an abort in some cases when it
	can't find the a11y registry.

2006-02-11  Brent Smith  <gnome@nextreality.net>

	* src/yelp-info-parser.c: (open_info_file):
	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
	(macro_tp_handler), (parser_handle_row_options),
	(parser_parse_table):
	More 64-bit cleanups with gsize

2006-02-11  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (toc_process_pending), (process_xslt),
	(process_cleanup):
	Small speedup achieved by only reading the TOC stylesheet once
	* stylesheets/toc2html.xsl:
	small speedups

2006-02-11  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (process_info_pending):
	Committed a patch from Robert Harris to fix a crash.

2006-02-04  Brent Smith  <gnome@nextreality.net>

	* src/yelp-window.c: (pager_page_cb):
	Fixed a bug with malformed documents which caused a crash.

2006-02-02  Brent Smith  <gnome@nextreality.net>

	* src/yelp-main.c: (main_start):
	call gnome_vfs_make_uri_from_input_with_dirs() to check for a relative